exibicao do nome do estado

--- a/brazil-map/map.html
+++ b/brazil-map/map.html
@@ -16,6 +16,7 @@
   <body>
     <h2>Brazilian Sates Map</h2>
     <div id="map" class="map"></div>
+    <div>Selected regions: <span id="info">None</span></div>
     <script src = "main.js"></script>
   </body>
 </html>
